# aind-dynamic-foraging-data-utils

./: .flake8  .gitignore  AGENTS.md  README.md  df_sessions.pk  df_sessions_6_7.pk  pyproject.toml  setup.py
.claude/skills/: aind-dynamic-foraging-data-access.skill  aind-foraging-pipeline.skill
.claude/skills/aind-dynamic-foraging-data-access/: SKILL.md
.claude/skills/aind-dynamic-foraging-data-access/references/: data-sources.md  parquet-api.md
.claude/skills/aind-foraging-pipeline/: SKILL.md
.claude/skills/aind-foraging-pipeline/references/: data-sources.md  parquet-api.md
.github/workflows/: tag_and_publish.yml  test_and_lint.yml
doc_template/source/: conf.py
examples/: make_dataframes.py  viz_dynamic_foraging_photometry.ipynb
nwb/: 697062_2023-11-14_11-12-44.nwb  697062_2023-11-15_10-02-05.nwb
src/aind_dynamic_foraging_data_utils/: __init__.py  _direct_nwb.py  aind_dynamic_foraging_data_utils.py  alignment.py  cache_utils.py  code_ocean_utils.py  enrich_dfs.py  nwb_utils.py  parquet_builder.py  to_move.py
src/aind_dynamic_foraging_data_utils/foraging_cache/: README.md  README_build.md  __init__.py  build_cache.py  nwb_reader_legacy.py  parquet_builder.py  query.py  query_examples.ipynb  query_examples.py  sample_cache_trigger.py
src/aind_dynamic_foraging_data_utils/foraging_cache/util/: __init__.py  nwb_reader_aind.py  nwb_reader_legacy.py  parquet_builder.py  postprocess.py
src/aind_dynamic_foraging_data_utils/foraging_cache/validate/: plot_validation.py  validate_step1.py  validate_step2.py  validate_step2b.py
src/aind_library_template/: __init__.py
src/aind_pavlovian_data_utils/: __init__.py  enrich_dfs.py  nwb_utils.py  pavlovian_analysis.py
src/dynamic_foraging_analysis/: dynamic_foraging_utils.py
tests/: __init__.py  test_aind_dynamic_foraging_data_utils.py  test_direct_backend.py  test_dynamic_foraging_utils.py  test_parquet_cache.py  test_pavlovian_analysis.py  test_query.py
tests/nwb/: 697062_2023-11-20_10-39-40.nwb
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/: .zattrs  .zmetadata
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/FIP_falling_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/FIP_falling_time/timestamps/: 0  1  2  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/FIP_rising_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/FIP_rising_time/data/: .zarray  2
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/FIP_rising_time/timestamps/: 0  1  2  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_1/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_1/data/: 0  1  2  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_1/timestamps/: .zarray  1  2
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_1_preprocessed/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_1_preprocessed/data/: 0  1  2  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_1_preprocessed/timestamps/: 0  2
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_2/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_2/data/: 0  1  2  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_2/timestamps/: 0  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_2_preprocessed/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_2_preprocessed/data/: 0  1  2  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/G_2_preprocessed/timestamps/: .zarray  1  3
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/Iso_1/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/Iso_1_preprocessed/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/Iso_2/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/Iso_2_preprocessed/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/R_1/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/R_1_preprocessed/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/R_2/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/R_2_preprocessed/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/left_lick_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/left_reward_delivery_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/optogenetics_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/right_lick_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/acquisition/right_reward_delivery_time/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/file_create_date/: 0
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/general/institution/: 0
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/general/session_id/: 0
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/general/subject/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/identifier/: 0
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/intervals/trials/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/scratch/metadata/: .zattrs
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/session_description/: 0
tests/nwb/behavior_717531_2024-08-07_09-01-02.nwb/timestamps_reference_time/: 0
(+189 files in other folders)
