[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-dynamic-foraging-data-utils"
description = "Functions to help with postprocessing dynamic foraging data."
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'pandas',
    'numpy',
    'pynwb',
    'hdmf_zarr',
    'aind-data-access-api',
    'codeocean',
    's3fs >= 2025.10.0',
    'pyarrow',
    'duckdb'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_dynamic_foraging_data_utils.__version__"}

[tool.black]
line-length = 100
target_version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
# Omit modules that require external resources and so can't be unit-tested in CI:
# S3 / docDB / NWB-file reads, and the parquet build (much of which runs in worker
# subprocesses that coverage doesn't trace). The pure-computation (alignment) and
# post-processing (postprocess) code stays measured.
omit = [
    "*__init__*",
    "*/nwb_utils.py",
    "*/code_ocean_utils.py",
    "*/enrich_dfs.py",
    "*/foraging_cache/build_cache.py",
    "*/foraging_cache/query_examples.py",
    "*/foraging_cache/util/parquet_builder.py",
    "*/foraging_cache/util/nwb_reader_aind.py",
    "*/foraging_cache/util/nwb_reader_legacy.py",
    "*/foraging_cache/validate/*",
]
source = ["aind_dynamic_foraging_data_utils", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 80

[tool.isort]
line_length = 100
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build", "src/aind_dynamic_foraging_data_utils/foraging_cache/validate"]
fail-under = 100
